fix some whitespace issue in navbar

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -8,7 +8,7 @@
 
   @media screen and (max-width: 500px) {
     height: 70px;
-    padding: 4px 0px;
+    padding: 4px;
     button {
       padding: 8px;
     }
@@ -40,6 +40,12 @@
         color: $black-500;
         margin-right: 8px;
 
+        @media screen and (max-width: 500px) {
+          font-weight: 14px;
+          padding: 0 14px;
+          margin-right: 0;
+        }
+
         &:not(.active):hover {
           background-color: rgba(128, 128, 128, 0.15);
         }
@@ -55,6 +61,10 @@
     flex: 1;
     display: flex;
     align-items: center;
+    margin-right: 6px;
+    @media screen and (max-width: 500px) {
+      margin-right: 0;
+    }
     &__bar {
       display: flex;
       flex: 1;
